ev_site_macros/tests/fail/equal_to_parent.stderr
error: tier P1 equals enclosing tier; omit `tier:` to inherit from parent
 --> tests/fail/equal_to_parent.rs:7:18
  |
7 |             Child { tier: P1 }
  |                           ^^
  |
  = note: -Ztrack-diagnostics: created at /rustc-dev/8b03437a8ffc8f8b01e62ef5fce82a37ada09b12/compiler/rustc_builtin_macros/src/compile_error.rs:22:25
